i edit flex-wrap value to fix responsive of box

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ body
 }
 
 .Box-area
-{
+{ 
+    
     width: 70%; 
     margin: auto;
     background-color: #555;
@@ -19,6 +20,7 @@ body
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 .Box-area .box
 {
@@ -42,6 +44,7 @@ body
 {
     background-color: #e83493 ; 
     color: #fff;
+    cursor: pointer;
 }
 
 
